k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coff
  labels:
    app.kubernetes.io/part-of: coff-campaign-engine
